fixed spelling misstake

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Page1
 <Body>
 <h1>Welcome to the first page!</h1>
 <p>This is the first page for this assignment</p>
-<p><a href="Page2.html"> This Link will bring you to the second page!</a></p>
+<p><a href="page2.html"> This Link will bring you to the second page!</a></p>
 
 <p><a href="https://youtube.com/">This link will bring you to youtube!</a></p>
 <img src="https://media.tenor.com/xfooYTo-XbUAAAAe/smile-meme.png" alt="test">
